@@ -25,6 +25,7 @@ import ca.uhn.fhir.interceptor.model.RequestPartitionId;
 import ca.uhn.fhir.jpa.api.config.JpaStorageSettings;
 import ca.uhn.fhir.jpa.api.model.PersistentIdToForcedIdMap;
 import ca.uhn.fhir.jpa.api.svc.IIdHelperService;
+import ca.uhn.fhir.jpa.api.svc.ResolveIdentityMode;
 import ca.uhn.fhir.jpa.dao.data.IResourceTableDao;
 import ca.uhn.fhir.jpa.model.config.PartitionSettings;
 import ca.uhn.fhir.jpa.model.cross.IResourceLookup;
@@ -35,11 +36,12 @@ import ca.uhn.fhir.jpa.model.entity.ResourceTable;
 import ca.uhn.fhir.jpa.search.builder.SearchBuilder;
 import ca.uhn.fhir.jpa.util.MemoryCacheService;
 import ca.uhn.fhir.jpa.util.QueryChunker;
-import ca.uhn.fhir.model.primitive.IdDt;
 import ca.uhn.fhir.rest.api.server.storage.BaseResourcePersistentId;
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
 import ca.uhn.fhir.rest.server.exceptions.PreconditionFailedException;
+import ca.uhn.fhir.rest.server.exceptions.ResourceGoneException;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
+import ca.uhn.fhir.util.TaskChunker;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ListMultimap;
 import com.google.common.collect.MultimapBuilder;
@@ -60,11 +62,12 @@ import org.hl7.fhir.instance.model.api.IAnyResource;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
 import org.hl7.fhir.r4.model.IdType;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -79,6 +82,7 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import static ca.uhn.fhir.jpa.search.builder.predicate.BaseJoiningPredicateBuilder.replaceDefaultPartitionIdIfNonNull;
+import static ca.uhn.fhir.model.primitive.IdDt.isValidLong;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 /**
@@ -102,6 +106,7 @@ import static org.apache.commons.lang3.StringUtils.isNotBlank;
 public class IdHelperService implements IIdHelperService<JpaPid> {
 	public static final Predicate[] EMPTY_PREDICATE_ARRAY = new Predicate[0];
 	public static final String RESOURCE_PID = "RESOURCE_PID";
+	private static final Logger ourLog = LoggerFactory.getLogger(IdHelperService.class);
 
 	@Autowired
 	protected IResourceTableDao myResourceTableDao;
@@ -131,20 +136,6 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 	/**
 	 * Given a forced ID, convert it to its Long value. Since you are allowed to use string IDs for resources, we need to
 	 * convert those to the underlying Long values that are stored, for lookup and comparison purposes.
-	 *
-	 * @throws ResourceNotFoundException If the ID can not be found
-	 */
-	@Override
-	@Nonnull
-	public IResourceLookup<JpaPid> resolveResourceIdentity(
-			@Nonnull RequestPartitionId theRequestPartitionId, String theResourceType, String theResourceId)
-			throws ResourceNotFoundException {
-		return resolveResourceIdentity(theRequestPartitionId, theResourceType, theResourceId, false);
-	}
-
-	/**
-	 * Given a forced ID, convert it to its Long value. Since you are allowed to use string IDs for resources, we need to
-	 * convert those to the underlying Long values that are stored, for lookup and comparison purposes.
 	 * Optionally filters out deleted resources.
 	 *
 	 * @throws ResourceNotFoundException If the ID can not be found
@@ -153,48 +144,236 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 	@Nonnull
 	public IResourceLookup<JpaPid> resolveResourceIdentity(
 			@Nonnull RequestPartitionId theRequestPartitionId,
-			String theResourceType,
-			final String theResourceId,
-			boolean theExcludeDeleted)
+			@Nullable String theResourceType,
+			@Nonnull final String theResourceId,
+			@Nonnull ResolveIdentityMode theMode)
 			throws ResourceNotFoundException {
-		assert myDontCheckActiveTransactionForUnitTest || TransactionSynchronizationManager.isSynchronizationActive()
-				: "no transaction active";
 
-		String resourceIdToUse = theResourceId;
-		if (resourceIdToUse.contains("/")) {
-			resourceIdToUse = theResourceId.substring(resourceIdToUse.indexOf("/") + 1);
+		IIdType id;
+		if (theResourceType != null) {
+			id = newIdType(theResourceType + "/" + theResourceId);
+		} else {
+			id = newIdType(theResourceId);
 		}
-		IdDt id = new IdDt(theResourceType, resourceIdToUse);
-		Map<String, List<IResourceLookup<JpaPid>>> matches =
-				translateForcedIdToPids(theRequestPartitionId, Collections.singletonList(id), theExcludeDeleted);
+		List<IIdType> ids = List.of(id);
+		Map<IIdType, IResourceLookup<JpaPid>> outcome = resolveResourceIdentities(theRequestPartitionId, ids, theMode);
 
 		// We only pass 1 input in so only 0..1 will come back
-		if (matches.isEmpty() || !matches.containsKey(resourceIdToUse)) {
+		if (!outcome.containsKey(id)) {
 			throw new ResourceNotFoundException(Msg.code(2001) + "Resource " + id + " is not known");
 		}
 
-		if (matches.size() > 1 || matches.get(resourceIdToUse).size() > 1) {
-			/*
-			 *  This means that:
-			 *  1. There are two resources with the exact same resource type and forced id
-			 *  2. The unique constraint on this column-pair has been dropped
-			 */
-			String msg = myFhirCtx.getLocalizer().getMessage(IdHelperService.class, "nonUniqueForcedId");
-			throw new PreconditionFailedException(Msg.code(1099) + msg);
+		return outcome.get(id);
+	}
+
+	@Nonnull
+	@Override
+	public Map<IIdType, IResourceLookup<JpaPid>> resolveResourceIdentities(
+			@Nonnull RequestPartitionId theRequestPartitionId,
+			Collection<IIdType> theIds,
+			ResolveIdentityMode theMode) {
+		assert myDontCheckActiveTransactionForUnitTest || TransactionSynchronizationManager.isSynchronizationActive()
+				: "no transaction active";
+
+		if (theIds.isEmpty()) {
+			return new HashMap<>();
 		}
 
-		return matches.get(resourceIdToUse).get(0);
+		Collection<IIdType> ids = new ArrayList<>(theIds);
+		ids.forEach(id -> Validate.isTrue(id.hasIdPart()));
+
+		RequestPartitionId requestPartitionId = replaceDefault(theRequestPartitionId);
+		ListMultimap<IIdType, IResourceLookup<JpaPid>> idToLookup =
+				MultimapBuilder.hashKeys(theIds.size()).arrayListValues(1).build();
+
+		// Do we have any FHIR ID lookups cached for any of the IDs
+		if (theMode.isUseCache(myStorageSettings.isDeleteEnabled()) && !ids.isEmpty()) {
+			resolveResourceIdentitiesForFhirIdsUsingCache(requestPartitionId, theMode, ids, idToLookup);
+		}
+
+		// We still haven't found IDs, let's look them up in the DB
+		if (!ids.isEmpty()) {
+			resolveResourceIdentitiesForFhirIdsUsingDatabase(requestPartitionId, ids, idToLookup);
+		}
+
+		// Convert the multimap into a simple map
+		Map<IIdType, IResourceLookup<JpaPid>> retVal = new HashMap<>();
+		for (Map.Entry<IIdType, IResourceLookup<JpaPid>> next : idToLookup.entries()) {
+			if (next.getValue().getDeleted() != null) {
+				if (theMode.isFailOnDeleted()) {
+					String msg = myFhirCtx
+							.getLocalizer()
+							.getMessageSanitized(
+									IdHelperService.class,
+									"deletedId",
+									next.getKey().getValue());
+					throw new ResourceGoneException(Msg.code(2572) + msg);
+				}
+				if (!theMode.isIncludeDeleted()) {
+					continue;
+				}
+			}
+
+			IResourceLookup previousValue = retVal.put(next.getKey(), next.getValue());
+			if (previousValue != null) {
+				/*
+				 *  This means that either:
+				 *  1. There are two resources with the exact same resource type and forced
+				 *     id. The most likely reason for that is that someone is performing a
+				 *     multi-partition search and there are resources on each partition
+				 *     with the same ID.
+				 *  2. The unique constraint on the FHIR_ID column has been dropped
+				 */
+				ourLog.warn(
+						"Resource ID[{}] corresponds to lookups: {} and {}",
+						next.getKey(),
+						previousValue,
+						next.getValue());
+				String msg = myFhirCtx.getLocalizer().getMessage(IdHelperService.class, "nonUniqueForcedId");
+				throw new PreconditionFailedException(Msg.code(1099) + msg);
+			}
+		}
+
+		return retVal;
 	}
 
 	/**
-	 * Returns a mapping of Id -> IResourcePersistentId.
-	 * If any resource is not found, it will throw ResourceNotFound exception (and no map will be returned)
+	 * Fetch the resource identity ({@link IResourceLookup}) for a collection of
+	 * resource IDs from the internal memory cache if possible. Note that we only
+	 * use cached results if deletes are disabled on the server (since it is
+	 * therefore not possible that we have an entry in the cache that has since
+	 * been deleted but the cache doesn't know about the deletion), or if we
+	 * aren't excluding deleted results anyhow.
+	 *
+	 * @param theRequestPartitionId The partition(s) to search
+	 * @param theIdsToResolve       The IDs we should look up. Any IDs that are resolved
+	 *                              will be removed from this list. Any IDs remaining in
+	 *                              the list after calling this method still haven't
+	 *                              been attempted to be resolved.
+	 * @param theMapToPopulate      The results will be populated into this map
 	 */
-	@Override
-	@Nonnull
-	public Map<String, JpaPid> resolveResourcePersistentIds(
-			@Nonnull RequestPartitionId theRequestPartitionId, String theResourceType, List<String> theIds) {
-		return resolveResourcePersistentIds(theRequestPartitionId, theResourceType, theIds, false);
+	private void resolveResourceIdentitiesForFhirIdsUsingCache(
+			@Nonnull RequestPartitionId theRequestPartitionId,
+			ResolveIdentityMode theMode,
+			Collection<IIdType> theIdsToResolve,
+			ListMultimap<IIdType, IResourceLookup<JpaPid>> theMapToPopulate) {
+		for (Iterator<IIdType> idIterator = theIdsToResolve.iterator(); idIterator.hasNext(); ) {
+			IIdType nextForcedId = idIterator.next();
+			MemoryCacheService.ForcedIdCacheKey nextKey = new MemoryCacheService.ForcedIdCacheKey(
+					nextForcedId.getResourceType(), nextForcedId.getIdPart(), theRequestPartitionId);
+			if (theMode.isUseCache(myStorageSettings.isDeleteEnabled())) {
+				List<IResourceLookup<JpaPid>> cachedLookups = myMemoryCacheService.getIfPresent(
+						MemoryCacheService.CacheEnum.RESOURCE_LOOKUP_BY_FORCED_ID, nextKey);
+				if (cachedLookups != null && !cachedLookups.isEmpty()) {
+					idIterator.remove();
+					for (IResourceLookup<JpaPid> cachedLookup : cachedLookups) {
+						if (theMode.isIncludeDeleted() || cachedLookup.getDeleted() == null) {
+							theMapToPopulate.put(nextKey.toIdType(myFhirCtx), cachedLookup);
+						}
+					}
+				}
+			}
+		}
+	}
+
+	/**
+	 * Fetch the resource identity ({@link IResourceLookup}) for a collection of
+	 * resource IDs from the database
+	 *
+	 * @param theRequestPartitionId The partition(s) to search
+	 * @param theIdsToResolve       The IDs we should look up
+	 * @param theMapToPopulate      The results will be populated into this map
+	 */
+	private void resolveResourceIdentitiesForFhirIdsUsingDatabase(
+			RequestPartitionId theRequestPartitionId,
+			Collection<IIdType> theIdsToResolve,
+			ListMultimap<IIdType, IResourceLookup<JpaPid>> theMapToPopulate) {
+
+		/*
+		 * If we have more than a threshold of IDs, we need to chunk the execution to
+		 * avoid having too many parameters in one SQL statement
+		 */
+		int maxPageSize = (SearchBuilder.getMaximumPageSize() / 2) - 10;
+		if (theIdsToResolve.size() > maxPageSize) {
+			TaskChunker.chunk(
+					theIdsToResolve,
+					maxPageSize,
+					chunk -> resolveResourceIdentitiesForFhirIdsUsingDatabase(
+							theRequestPartitionId, chunk, theMapToPopulate));
+			return;
+		}
+
+		CriteriaBuilder cb = myEntityManager.getCriteriaBuilder();
+		CriteriaQuery<Tuple> criteriaQuery = cb.createTupleQuery();
+		Root<ResourceTable> from = criteriaQuery.from(ResourceTable.class);
+		criteriaQuery.multiselect(
+				from.get("myId"),
+				from.get("myResourceType"),
+				from.get("myFhirId"),
+				from.get("myDeleted"),
+				from.get("myPartitionIdValue"));
+
+		List<Predicate> outerAndPredicates = new ArrayList<>(2);
+		if (!theRequestPartitionId.isAllPartitions()) {
+			getOptionalPartitionPredicate(theRequestPartitionId, cb, from).ifPresent(outerAndPredicates::add);
+		}
+
+		// one create one clause per id.
+		List<Predicate> innerIdPredicates = new ArrayList<>(theIdsToResolve.size());
+		boolean haveUntypedIds = false;
+		for (IIdType next : theIdsToResolve) {
+			if (!next.hasResourceType()) {
+				haveUntypedIds = true;
+			}
+
+			List<Predicate> idPredicates = new ArrayList<>(2);
+
+			if (myStorageSettings.getResourceClientIdStrategy() == JpaStorageSettings.ClientIdStrategyEnum.ALPHANUMERIC
+					&& next.isIdPartValidLong()) {
+				Predicate typeCriteria = cb.equal(from.get("myId"), next.getIdPartAsLong());
+				idPredicates.add(typeCriteria);
+			} else {
+				if (isNotBlank(next.getResourceType())) {
+					Predicate typeCriteria = cb.equal(from.get("myResourceType"), next.getResourceType());
+					idPredicates.add(typeCriteria);
+				}
+				Predicate idCriteria = cb.equal(from.get("myFhirId"), next.getIdPart());
+				idPredicates.add(idCriteria);
+			}
+
+			innerIdPredicates.add(cb.and(idPredicates.toArray(EMPTY_PREDICATE_ARRAY)));
+		}
+		outerAndPredicates.add(cb.or(innerIdPredicates.toArray(EMPTY_PREDICATE_ARRAY)));
+
+		criteriaQuery.where(cb.and(outerAndPredicates.toArray(EMPTY_PREDICATE_ARRAY)));
+		TypedQuery<Tuple> query = myEntityManager.createQuery(criteriaQuery);
+		List<Tuple> results = query.getResultList();
+		for (Tuple nextId : results) {
+			// Check if the nextId has a resource ID. It may have a null resource ID if a commit is still pending.
+			Long resourcePid = nextId.get(0, Long.class);
+			String resourceType = nextId.get(1, String.class);
+			String fhirId = nextId.get(2, String.class);
+			Date deletedAd = nextId.get(3, Date.class);
+			Integer partitionId = nextId.get(4, Integer.class);
+			if (resourcePid != null) {
+				JpaResourceLookup lookup = new JpaResourceLookup(
+						resourceType, resourcePid, deletedAd, PartitionablePartitionId.with(partitionId, null));
+
+				MemoryCacheService.ForcedIdCacheKey nextKey =
+						new MemoryCacheService.ForcedIdCacheKey(resourceType, fhirId, theRequestPartitionId);
+				IIdType id = nextKey.toIdType(myFhirCtx);
+				theMapToPopulate.put(id, lookup);
+
+				if (haveUntypedIds) {
+					id = nextKey.toIdTypeWithoutResourceType(myFhirCtx);
+					theMapToPopulate.put(id, lookup);
+				}
+
+				List<IResourceLookup<JpaPid>> valueToCache = theMapToPopulate.get(id);
+				myMemoryCacheService.putAfterCommit(
+						MemoryCacheService.CacheEnum.RESOURCE_LOOKUP_BY_FORCED_ID, nextKey, valueToCache);
+			}
+		}
 	}
 
 	/**
@@ -208,7 +387,7 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 			@Nonnull RequestPartitionId theRequestPartitionId,
 			String theResourceType,
 			List<String> theIds,
-			boolean theExcludeDeleted) {
+			ResolveIdentityMode theMode) {
 		assert myDontCheckActiveTransactionForUnitTest || TransactionSynchronizationManager.isSynchronizationActive();
 		Validate.notNull(theIds, "theIds cannot be null");
 		Validate.isTrue(!theIds.isEmpty(), "theIds must not be empty");
@@ -224,7 +403,7 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 				// is a forced id
 				// we must resolve!
 				if (myStorageSettings.isDeleteEnabled()) {
-					retVal = resolveResourceIdentity(theRequestPartitionId, theResourceType, id, theExcludeDeleted)
+					retVal = resolveResourceIdentity(theRequestPartitionId, theResourceType, id, theMode)
 							.getPersistentId();
 					retVals.put(id, retVal);
 				} else {
@@ -251,18 +430,6 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 
 	/**
 	 * Given a resource type and ID, determines the internal persistent ID for the resource.
-	 *
-	 * @throws ResourceNotFoundException If the ID can not be found
-	 */
-	@Override
-	@Nonnull
-	public JpaPid resolveResourcePersistentIds(
-			@Nonnull RequestPartitionId theRequestPartitionId, String theResourceType, String theId) {
-		return resolveResourcePersistentIds(theRequestPartitionId, theResourceType, theId, false);
-	}
-
-	/**
-	 * Given a resource type and ID, determines the internal persistent ID for the resource.
 	 * Optionally filters out deleted resources.
 	 *
 	 * @throws ResourceNotFoundException If the ID can not be found
@@ -273,11 +440,11 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 			@Nonnull RequestPartitionId theRequestPartitionId,
 			String theResourceType,
 			String theId,
-			boolean theExcludeDeleted) {
+			ResolveIdentityMode theMode) {
 		Validate.notNull(theId, "theId must not be null");
 
 		Map<String, JpaPid> retVal = resolveResourcePersistentIds(
-				theRequestPartitionId, theResourceType, Collections.singletonList(theId), theExcludeDeleted);
+				theRequestPartitionId, theResourceType, Collections.singletonList(theId), theMode);
 		return retVal.get(theId); // should be only one
 	}
 
@@ -359,11 +526,11 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 
 				idsToCheck.add(nextId);
 			}
-			new QueryChunker<IIdType>()
-					.chunk(
-							idsToCheck,
-							SearchBuilder.getMaximumPageSize() / 2,
-							ids -> doResolvePersistentIds(theRequestPartitionId, ids, retVal));
+			new QueryChunker<IIdType>();
+			TaskChunker.chunk(
+					idsToCheck,
+					SearchBuilder.getMaximumPageSize() / 2,
+					ids -> doResolvePersistentIds(theRequestPartitionId, ids, retVal));
 		}
 
 		return retVal;
@@ -430,18 +597,30 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 			RequestPartitionId theRequestPartitionId, CriteriaBuilder cb, Root<ResourceTable> from) {
 		if (myPartitionSettings.isAllowUnqualifiedCrossPartitionReference()) {
 			return Optional.empty();
-		} else if (theRequestPartitionId.isDefaultPartition() && myPartitionSettings.getDefaultPartitionId() == null) {
-			Predicate partitionIdCriteria = cb.isNull(from.get("myPartitionIdValue"));
-			return Optional.of(partitionIdCriteria);
-		} else if (!theRequestPartitionId.isAllPartitions()) {
+		} else if (theRequestPartitionId.isAllPartitions()) {
+			return Optional.empty();
+		} else {
 			List<Integer> partitionIds = theRequestPartitionId.getPartitionIds();
 			partitionIds = replaceDefaultPartitionIdIfNonNull(myPartitionSettings, partitionIds);
-			if (partitionIds.size() > 1) {
-				Predicate partitionIdCriteria = from.get("myPartitionIdValue").in(partitionIds);
-				return Optional.of(partitionIdCriteria);
-			} else if (partitionIds.size() == 1) {
-				Predicate partitionIdCriteria = cb.equal(from.get("myPartitionIdValue"), partitionIds.get(0));
-				return Optional.of(partitionIdCriteria);
+			if (partitionIds.contains(null)) {
+				Predicate partitionIdNullCriteria =
+						from.get("myPartitionIdValue").isNull();
+				if (partitionIds.size() == 1) {
+					return Optional.of(partitionIdNullCriteria);
+				} else {
+					Predicate partitionIdCriteria = from.get("myPartitionIdValue")
+							.in(partitionIds.stream().filter(t -> t != null).collect(Collectors.toList()));
+					return Optional.of(cb.or(partitionIdCriteria, partitionIdNullCriteria));
+				}
+			} else {
+				if (partitionIds.size() > 1) {
+					Predicate partitionIdCriteria =
+							from.get("myPartitionIdValue").in(partitionIds);
+					return Optional.of(partitionIdCriteria);
+				} else if (partitionIds.size() == 1) {
+					Predicate partitionIdCriteria = cb.equal(from.get("myPartitionIdValue"), partitionIds.get(0));
+					return Optional.of(partitionIdCriteria);
+				}
 			}
 		}
 		return Optional.empty();
@@ -475,6 +654,7 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 		return retVal;
 	}
 
+	@SuppressWarnings("OptionalAssignedToNull")
 	@Override
 	public Optional<String> translatePidIdToForcedIdWithCache(JpaPid theId) {
 		// do getIfPresent and then put to avoid doing I/O inside the cache.
@@ -492,112 +672,6 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 		return forcedId;
 	}
 
-	private ListMultimap<String, String> organizeIdsByResourceType(Collection<IIdType> theIds) {
-		ListMultimap<String, String> typeToIds =
-				MultimapBuilder.hashKeys().arrayListValues().build();
-		for (IIdType nextId : theIds) {
-			if (myStorageSettings.getResourceClientIdStrategy() == JpaStorageSettings.ClientIdStrategyEnum.ANY
-					|| !isValidPid(nextId)) {
-				if (nextId.hasResourceType()) {
-					typeToIds.put(nextId.getResourceType(), nextId.getIdPart());
-				} else {
-					typeToIds.put("", nextId.getIdPart());
-				}
-			}
-		}
-		return typeToIds;
-	}
-
-	private Map<String, List<IResourceLookup<JpaPid>>> translateForcedIdToPids(
-			@Nonnull RequestPartitionId theRequestPartitionId, Collection<IIdType> theId, boolean theExcludeDeleted) {
-		theId.forEach(id -> Validate.isTrue(id.hasIdPart()));
-
-		if (theId.isEmpty()) {
-			return new HashMap<>();
-		}
-
-		Map<String, List<IResourceLookup<JpaPid>>> retVal = new HashMap<>();
-		RequestPartitionId requestPartitionId = replaceDefault(theRequestPartitionId);
-
-		if (myStorageSettings.getResourceClientIdStrategy() != JpaStorageSettings.ClientIdStrategyEnum.ANY) {
-			List<Long> pids = theId.stream()
-					.filter(t -> isValidPid(t))
-					.map(IIdType::getIdPartAsLong)
-					.collect(Collectors.toList());
-			if (!pids.isEmpty()) {
-				resolvePids(requestPartitionId, pids, retVal);
-			}
-		}
-
-		// returns a map of resourcetype->id
-		ListMultimap<String, String> typeToIds = organizeIdsByResourceType(theId);
-		for (Map.Entry<String, Collection<String>> nextEntry : typeToIds.asMap().entrySet()) {
-			String nextResourceType = nextEntry.getKey();
-			Collection<String> nextIds = nextEntry.getValue();
-
-			if (!myStorageSettings.isDeleteEnabled()) {
-				for (Iterator<String> forcedIdIterator = nextIds.iterator(); forcedIdIterator.hasNext(); ) {
-					String nextForcedId = forcedIdIterator.next();
-					String nextKey = nextResourceType + "/" + nextForcedId;
-					IResourceLookup<JpaPid> cachedLookup =
-							myMemoryCacheService.getIfPresent(MemoryCacheService.CacheEnum.RESOURCE_LOOKUP, nextKey);
-					if (cachedLookup != null) {
-						forcedIdIterator.remove();
-						retVal.computeIfAbsent(nextForcedId, id -> new ArrayList<>())
-								.add(cachedLookup);
-					}
-				}
-			}
-
-			if (!nextIds.isEmpty()) {
-				Collection<Object[]> views;
-				assert isNotBlank(nextResourceType);
-
-				if (requestPartitionId.isAllPartitions()) {
-					views = myResourceTableDao.findAndResolveByForcedIdWithNoType(
-							nextResourceType, nextIds, theExcludeDeleted);
-				} else {
-					if (requestPartitionId.isDefaultPartition()) {
-						views = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
-								nextResourceType, nextIds, theExcludeDeleted);
-					} else if (requestPartitionId.hasDefaultPartitionId()) {
-						views = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
-								nextResourceType,
-								nextIds,
-								requestPartitionId.getPartitionIdsWithoutDefault(),
-								theExcludeDeleted);
-					} else {
-						views = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartition(
-								nextResourceType, nextIds, requestPartitionId.getPartitionIds(), theExcludeDeleted);
-					}
-				}
-
-				for (Object[] next : views) {
-					String resourceType = (String) next[0];
-					Long resourcePid = (Long) next[1];
-					String forcedId = (String) next[2];
-					Date deletedAt = (Date) next[3];
-					Integer partitionId = (Integer) next[4];
-					LocalDate partitionDate = (LocalDate) next[5];
-
-					JpaResourceLookup lookup = new JpaResourceLookup(
-							resourceType,
-							resourcePid,
-							deletedAt,
-							PartitionablePartitionId.with(partitionId, partitionDate));
-					retVal.computeIfAbsent(forcedId, id -> new ArrayList<>()).add(lookup);
-
-					if (!myStorageSettings.isDeleteEnabled()) {
-						String key = resourceType + "/" + forcedId;
-						myMemoryCacheService.putAfterCommit(MemoryCacheService.CacheEnum.RESOURCE_LOOKUP, key, lookup);
-					}
-				}
-			}
-		}
-
-		return retVal;
-	}
-
 	public RequestPartitionId replaceDefault(RequestPartitionId theRequestPartitionId) {
 		if (myPartitionSettings.getDefaultPartitionId() != null) {
 			if (!theRequestPartitionId.isAllPartitions() && theRequestPartitionId.hasDefaultPartitionId()) {
@@ -610,59 +684,6 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 		return theRequestPartitionId;
 	}
 
-	private void resolvePids(
-			@Nonnull RequestPartitionId theRequestPartitionId,
-			List<Long> thePidsToResolve,
-			Map<String, List<IResourceLookup<JpaPid>>> theTargets) {
-		if (!myStorageSettings.isDeleteEnabled()) {
-			for (Iterator<Long> forcedIdIterator = thePidsToResolve.iterator(); forcedIdIterator.hasNext(); ) {
-				Long nextPid = forcedIdIterator.next();
-				String nextKey = Long.toString(nextPid);
-				IResourceLookup<JpaPid> cachedLookup =
-						myMemoryCacheService.getIfPresent(MemoryCacheService.CacheEnum.RESOURCE_LOOKUP, nextKey);
-				if (cachedLookup != null) {
-					forcedIdIterator.remove();
-					theTargets.computeIfAbsent(nextKey, id -> new ArrayList<>()).add(cachedLookup);
-				}
-			}
-		}
-
-		if (!thePidsToResolve.isEmpty()) {
-			Collection<Object[]> lookup;
-			if (theRequestPartitionId.isAllPartitions()) {
-				lookup = myResourceTableDao.findLookupFieldsByResourcePid(thePidsToResolve);
-			} else {
-				if (theRequestPartitionId.isDefaultPartition()) {
-					lookup = myResourceTableDao.findLookupFieldsByResourcePidInPartitionNull(thePidsToResolve);
-				} else if (theRequestPartitionId.hasDefaultPartitionId()) {
-					lookup = myResourceTableDao.findLookupFieldsByResourcePidInPartitionIdsOrNullPartition(
-							thePidsToResolve, theRequestPartitionId.getPartitionIdsWithoutDefault());
-				} else {
-					lookup = myResourceTableDao.findLookupFieldsByResourcePidInPartitionIds(
-							thePidsToResolve, theRequestPartitionId.getPartitionIds());
-				}
-			}
-			lookup.stream()
-					.map(t -> new JpaResourceLookup(
-							(String) t[0],
-							(Long) t[1],
-							(Date) t[2],
-							PartitionablePartitionId.with((Integer) t[3], (LocalDate) t[4])))
-					.forEach(t -> {
-						String id = t.getPersistentId().toString();
-						if (!theTargets.containsKey(id)) {
-							theTargets.put(id, new ArrayList<>());
-						}
-						theTargets.get(id).add(t);
-						if (!myStorageSettings.isDeleteEnabled()) {
-							String nextKey = t.getPersistentId().toString();
-							myMemoryCacheService.putAfterCommit(
-									MemoryCacheService.CacheEnum.RESOURCE_LOOKUP, nextKey, t);
-						}
-					});
-		}
-	}
-
 	@Override
 	public PersistentIdToForcedIdMap<JpaPid> translatePidsToForcedIds(Set<JpaPid> theResourceIds) {
 		assert myDontCheckActiveTransactionForUnitTest || TransactionSynchronizationManager.isSynchronizationActive();
@@ -673,7 +694,7 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 		List<Long> remainingPids =
 				thePids.stream().filter(t -> !retVal.containsKey(t)).collect(Collectors.toList());
 
-		new QueryChunker<Long>().chunk(remainingPids, t -> {
+		QueryChunker.chunk(remainingPids, t -> {
 			List<ResourceTable> resourceEntities = myResourceTableDao.findAllById(t);
 
 			for (ResourceTable nextResourceEntity : resourceEntities) {
@@ -701,52 +722,45 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 	 * Pre-cache a PID-to-Resource-ID mapping for later retrieval by {@link #translatePidsToForcedIds(Set)} and related methods
 	 */
 	@Override
-	public void addResolvedPidToForcedId(
-			JpaPid theJpaPid,
+	public void addResolvedPidToFhirId(
+			@Nonnull JpaPid theJpaPid,
 			@Nonnull RequestPartitionId theRequestPartitionId,
-			String theResourceType,
-			@Nullable String theForcedId,
+			@Nonnull String theResourceType,
+			@Nonnull String theFhirId,
 			@Nullable Date theDeletedAt) {
-		if (theForcedId != null) {
-			if (theJpaPid.getAssociatedResourceId() == null) {
-				populateAssociatedResourceId(theResourceType, theForcedId, theJpaPid);
-			}
-
-			myMemoryCacheService.putAfterCommit(
-					MemoryCacheService.CacheEnum.PID_TO_FORCED_ID,
-					theJpaPid.getId(),
-					Optional.of(theResourceType + "/" + theForcedId));
-			String key = toForcedIdToPidKey(theRequestPartitionId, theResourceType, theForcedId);
-			myMemoryCacheService.putAfterCommit(MemoryCacheService.CacheEnum.FORCED_ID_TO_PID, key, theJpaPid);
-		} else {
-			myMemoryCacheService.putAfterCommit(
-					MemoryCacheService.CacheEnum.PID_TO_FORCED_ID, theJpaPid.getId(), Optional.empty());
+		if (theJpaPid.getAssociatedResourceId() == null) {
+			populateAssociatedResourceId(theResourceType, theFhirId, theJpaPid);
 		}
 
-		if (!myStorageSettings.isDeleteEnabled()) {
-			JpaResourceLookup lookup = new JpaResourceLookup(
-					theResourceType, theJpaPid.getId(), theDeletedAt, theJpaPid.getPartitionablePartitionId());
-			String nextKey = theJpaPid.toString();
-			myMemoryCacheService.putAfterCommit(MemoryCacheService.CacheEnum.RESOURCE_LOOKUP, nextKey, lookup);
+		myMemoryCacheService.putAfterCommit(
+				MemoryCacheService.CacheEnum.PID_TO_FORCED_ID,
+				theJpaPid.getId(),
+				Optional.of(theResourceType + "/" + theFhirId));
+		String key = toForcedIdToPidKey(theRequestPartitionId, theResourceType, theFhirId);
+		myMemoryCacheService.putAfterCommit(MemoryCacheService.CacheEnum.FORCED_ID_TO_PID, key, theJpaPid);
+
+		JpaResourceLookup lookup = new JpaResourceLookup(
+				theResourceType, theJpaPid.getId(), theDeletedAt, theJpaPid.getPartitionablePartitionId());
+
+		MemoryCacheService.ForcedIdCacheKey fhirIdKey =
+				new MemoryCacheService.ForcedIdCacheKey(theResourceType, theFhirId, theRequestPartitionId);
+		myMemoryCacheService.putAfterCommit(
+				MemoryCacheService.CacheEnum.RESOURCE_LOOKUP_BY_FORCED_ID, fhirIdKey, List.of(lookup));
+
+		// If it's a pure-numeric ID, store it in the cache without a type as well
+		// so that we can resolve it this way when loading entities for update
+		if (myStorageSettings.getResourceClientIdStrategy() == JpaStorageSettings.ClientIdStrategyEnum.ALPHANUMERIC
+				&& isValidLong(theFhirId)) {
+			MemoryCacheService.ForcedIdCacheKey fhirIdKeyWithoutType =
+					new MemoryCacheService.ForcedIdCacheKey(null, theFhirId, theRequestPartitionId);
+			myMemoryCacheService.putAfterCommit(
+					MemoryCacheService.CacheEnum.RESOURCE_LOOKUP_BY_FORCED_ID, fhirIdKeyWithoutType, List.of(lookup));
 		}
 	}
 
 	@VisibleForTesting
 	public void setPartitionSettingsForUnitTest(PartitionSettings thePartitionSettings) {
 		myPartitionSettings = thePartitionSettings;
-	}
-
-	public static boolean isValidPid(IIdType theId) {
-		if (theId == null) {
-			return false;
-		}
-
-		String idPart = theId.getIdPart();
-		return isValidPid(idPart);
-	}
-
-	public static boolean isValidPid(String theIdPart) {
-		return StringUtils.isNumeric(theIdPart);
 	}
 
 	@Override
@@ -764,7 +778,11 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 		if (resourceId == null) {
 			IIdType id = theResource.getIdElement();
 			try {
-				retVal = resolveResourcePersistentIds(theRequestPartitionId, id.getResourceType(), id.getIdPart());
+				retVal = resolveResourceIdentityPid(
+						theRequestPartitionId,
+						id.getResourceType(),
+						id.getIdPart(),
+						ResolveIdentityMode.includeDeleted().cacheOk());
 			} catch (ResourceNotFoundException e) {
 				retVal = null;
 			}
@@ -835,5 +853,24 @@ public class IdHelperService implements IIdHelperService<JpaPid> {
 	@Override
 	public JpaPid newPidFromStringIdAndResourceName(String thePid, String theResourceName) {
 		return JpaPid.fromIdAndResourceType(Long.parseLong(thePid), theResourceName);
+	}
+
+	private IIdType newIdType(String theValue) {
+		IIdType retVal = myFhirCtx.getVersion().newIdType();
+		retVal.setValue(theValue);
+		return retVal;
+	}
+
+	public static boolean isValidPid(IIdType theId) {
+		if (theId == null) {
+			return false;
+		}
+
+		String idPart = theId.getIdPart();
+		return isValidPid(idPart);
+	}
+
+	public static boolean isValidPid(String theIdPart) {
+		return StringUtils.isNumeric(theIdPart);
 	}
 }
